debook_boot_dep001.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: boot001dep
  namespace: default
spec:

  selector:
    matchLabels:
      app: boot001dep
  
  # 3개의 파드를 생성. >> 무중단 배포를 위해 3개
  replicas: 3

  template:
    metadata:
      labels:
        # 생성될 파드에 'app=boot001kube' 레이블을 부여.
        app: boot001dep

    spec:
      containers:
        - name: boot-container # 컨테이너의 이름을 설정.
          image: junguijin/debook_boot_project:latest # 사용할 컨테이너 이미지를 지정.
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 # 컨테이너가 리스닝할 포트 번호를 지정한다.
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1 # 배포 중 사용할 수 없는 최대 Pod 수
      maxSurge: 1       # 배포 시 추가 생성 가능한 최대 Pod 수
