mariadb_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: default
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest # MariaDB 공식 이미지
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: init-sql-volume
              mountPath: /docker-entrypoint-initdb.d  # MariaDB 초기화 디렉토리
      volumes:
      - name: init-sql-volume
        persistentVolumeClaim:
          claimName: mariadb-pvc
