redis_dep.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: redis:latest
      ports:
        - containerPort: 6379
      volumeMounts:
        - name: redis-storage
          mountPath: /data
  volumes:
    - name: redis-storage
      emptyDir: {}  # 임시 스토리지, Pod이 종료되면 데이터도 사라짐
