debook_vue_ser001.yaml
apiVersion: v1

kind: Service

metadata:
  name: vue001ser
  namespace: default

spec:
  type: ClusterIP
  
  ports:
    - port: 8000 # 외부에서 접근할 포트 번호를 설정한다.
      targetPort: 80 # nginx(ingress) 설정을 고려하여 80으로 설정 >> front프로젝트 nginx.config파일 찹조
      protocol: TCP
      nodePort: 30000 # 클러스터의 모든 노드에서 이 포트를 통해 서비스에 접근할 수 있다.(30000 ~ 32767)

  selector:
    app: vue001dep
